--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,21 +1,24 @@
 patch_numbers: 16
-trans_linear_in_dim: 2048
+trans_linear_in_dim: 512
 use_temporal_attention: True
 
 save_model: False
 check_video_times: False
 
 # multi task
-c: 0.3
+c: 0.5
+
+wandb: False
 
 dataset_len: 1000
 
 #checkpoint: /data1/wangqiurui/code/DA TSNFormer/best/9class0.545reg0.6143.pth
 checkpoint: 
+#dataset: THUMOS14
 dataset: ActivityNet
 task: training
 way: 1
-shot: 1
+shot: 5
 # 1shot: 75, 5shot: 78
 query_per_class: 1
 fps: 30
@@ -37,9 +40,9 @@ sigma_step: 1000
 dropout: 0.1
 ada: True
 
-d_model: 2048
+d_model: 512
 # Transformer Parameters
-d_ff: 2048 # FeedForward dimension
+d_ff: 512 # FeedForward dimension
 d_k: 64
 d_v: 64  # dimension of K(=Q), V
 n_layers: 6  # number of Encoder of Decoder Layer
@@ -50,20 +53,24 @@ n_heads: 8  # number of heads in Multi-Head Attention
 data_paths:
   ActivityNet:
     original: /data1/wangqiurui/code/datasets/ActivityNet/v1-3/
-    extracted: /data1/wangqiurui/code/datasets/ActivityNet/extracted_frames2048/
-    #extracted: /data1/wangqiurui/code/datasets/ActivityNet/c3dfeature/
+    #extracted: /data1/wangqiurui/code/datasets/ActivityNet/extracted_frames2048/
+    # 512
+    extracted: /data1/wangqiurui/code/datasets/ActivityNet/c3dfeature/
     annotation: /data1/wangqiurui/code/datasets/ActivityNet/anet1.3_tsp_filtered.json
     action_name: /data1/wangqiurui/code/datasets/ActivityNet/action_name.csv
   THUMOS14:
-    extracted: datasets/THUMOS14/
-    annotation: datasets/THUMOS14/annotation/
+    extracted: /data1/wangqiurui/code/datasets/THUMOS14/c3dfeature
+    annotation: /data1/wangqiurui/code/datasets/thumos/annotations/thumos14_30fps.json
 
 paths:
   log: ./runs
 
 
 training:
-  an_classes: ['Fun sliding down', 'Beer pong', 'Getting a piercing', 'Shoveling snow', 'Kneeling', 'Tumbling', 'Playing water polo', 'Washing dishes', 'Blowing leaves', 'Playing congas', 'Making a lemonade', 'Playing kickball', 'Removing ice from car', 'Playing racquetball', 'Swimming', 'Playing bagpipes', 'Painting', 'Assembling bicycle', 'Playing violin', 'Surfing', 'Making a sandwich', 'Welding', 'Hopscotch', 'Gargling mouthwash', 'Baking cookies', 'Braiding hair', 'Capoeira', 'Slacklining', 'Plastering', 'Changing car wheel', 'Chopping wood', 'Removing curlers', 'Horseback riding', 'Smoking hookah', 'Doing a powerbomb', 'Playing ten pins', 'Getting a haircut', 'Playing beach volleyball', 'Making a cake', 'Clean and jerk', 'Trimming branches or hedges', 'Drum corps', 'Windsurfing', 'Kite flying', 'Using parallel bars', 'Doing kickboxing', 'Cleaning shoes', 'Playing field hockey', 'Playing squash', 'Rollerblading', 'Playing drums', 'Playing rubik cube', 'Sharpening knives', 'Zumba', 'Raking leaves', 'Bathing dog', 'Tug of war', 'Ping-pong', 'Using the balance beam', 'Playing lacrosse', 'Scuba diving', 'Preparing pasta', 'Brushing teeth', 'Playing badminton', 'Mixing drinks', 'Discus throw', 'Playing ice hockey', 'Doing crunches', 'Wrapping presents', 'Hand washing clothes', 'Rock climbing', 'Cutting the grass', 'Wakeboarding', 'Futsal', 'Playing piano', 'Baton twirling', 'Mooping floor', 'Triple jump', 'Longboarding', 'Polishing shoes', 'Doing motocross', 'Arm wrestling', 'Doing fencing', 'Hammer throw', 'Shot put', 'Playing pool', 'Blow-drying hair', 'Cricket', 'Spinning', 'Running a marathon', 'Table soccer', 'Playing flauta', 'Ice fishing', 'Tai chi', 'Archery', 'Shaving', 'Using the monkey bar', 'Layup drill in basketball', 'Spread mulch', 'Skateboarding', 'Canoeing', 'Mowing the lawn', 'Beach soccer', 'Hanging wallpaper', 'Tango', 'Disc dog', 'Powerbocking', 'Getting a tattoo', 'Doing nails', 'Snowboarding', 'Putting on shoes', 'Clipping cat claws', 'Snow tubing', 'River tubing', 'Putting on makeup', 'Decorating the Christmas tree', 'Fixing bicycle', 'Hitting a pinata', 'High jump', 'Doing karate', 'Kayaking', 'Grooming dog', 'Bungee jumping', 'Washing hands', 'Painting fence', 'Doing step aerobics', 'Installing carpet', 'Playing saxophone', 'Long jump', 'Javelin throw', 'Playing accordion', 'Smoking a cigarette', 'Belly dance', 'Playing polo', 'Throwing darts', 'Roof shingle removal', 'Tennis serve with ball bouncing', 'Skiing', 'Peeling potatoes', 'Elliptical trainer', 'Building sandcastles', 'Drinking beer', 'Rock-paper-scissors', 'Using the pommel horse', 'Croquet', 'Laying tile', 'Cleaning windows', 'Fixing the roof', 'Springboard diving', 'Waterskiing', 'Using uneven bars', 'Having an ice cream', 'Sailing', 'Washing face', 'Knitting', 'Bullfighting', 'Applying sunscreen', 'Painting furniture', 'Grooming horse', 'Carving jack-o-lanterns']
+  #an_classes: ['Fun sliding down', 'Beer pong', 'Getting a piercing', 'Shoveling snow', 'Kneeling', 'Tumbling', 'Playing water polo', 'Washing dishes', 'Blowing leaves', 'Playing congas', 'Making a lemonade', 'Playing kickball', 'Removing ice from car', 'Playing racquetball', 'Swimming', 'Playing bagpipes', 'Painting', 'Assembling bicycle', 'Playing violin', 'Surfing', 'Making a sandwich', 'Welding', 'Hopscotch', 'Gargling mouthwash', 'Baking cookies', 'Braiding hair', 'Capoeira', 'Slacklining', 'Plastering', 'Changing car wheel', 'Chopping wood', 'Removing curlers', 'Horseback riding', 'Smoking hookah', 'Doing a powerbomb', 'Playing ten pins', 'Getting a haircut', 'Playing beach volleyball', 'Making a cake', 'Clean and jerk', 'Trimming branches or hedges', 'Drum corps', 'Windsurfing', 'Kite flying', 'Using parallel bars', 'Doing kickboxing', 'Cleaning shoes', 'Playing field hockey', 'Playing squash', 'Rollerblading', 'Playing drums', 'Playing rubik cube', 'Sharpening knives', 'Zumba', 'Raking leaves', 'Bathing dog', 'Tug of war', 'Ping-pong', 'Using the balance beam', 'Playing lacrosse', 'Scuba diving', 'Preparing pasta', 'Brushing teeth', 'Playing badminton', 'Mixing drinks', 'Discus throw', 'Playing ice hockey', 'Doing crunches', 'Wrapping presents', 'Hand washing clothes', 'Rock climbing', 'Cutting the grass', 'Wakeboarding', 'Futsal', 'Playing piano', 'Baton twirling', 'Mooping floor', 'Triple jump', 'Longboarding', 'Polishing shoes', 'Doing motocross', 'Arm wrestling', 'Doing fencing', 'Hammer throw', 'Shot put', 'Playing pool', 'Blow-drying hair', 'Cricket', 'Spinning', 'Running a marathon', 'Table soccer', 'Playing flauta', 'Ice fishing', 'Tai chi', 'Archery', 'Shaving', 'Using the monkey bar', 'Layup drill in basketball', 'Spread mulch', 'Skateboarding', 'Canoeing', 'Mowing the lawn', 'Beach soccer', 'Hanging wallpaper', 'Tango', 'Disc dog', 'Powerbocking', 'Getting a tattoo', 'Doing nails', 'Snowboarding', 'Putting on shoes', 'Clipping cat claws', 'Snow tubing', 'River tubing', 'Putting on makeup', 'Decorating the Christmas tree', 'Fixing bicycle', 'Hitting a pinata', 'High jump', 'Doing karate', 'Kayaking', 'Grooming dog', 'Bungee jumping', 'Washing hands', 'Painting fence', 'Doing step aerobics', 'Installing carpet', 'Playing saxophone', 'Long jump', 'Javelin throw', 'Playing accordion', 'Smoking a cigarette', 'Belly dance', 'Playing polo', 'Throwing darts', 'Roof shingle removal', 'Tennis serve with ball bouncing', 'Skiing', 'Peeling potatoes', 'Elliptical trainer', 'Building sandcastles', 'Drinking beer', 'Rock-paper-scissors', 'Using the pommel horse', 'Croquet', 'Laying tile', 'Cleaning windows', 'Fixing the roof', 'Springboard diving', 'Waterskiing', 'Using uneven bars', 'Having an ice cream', 'Sailing', 'Washing face', 'Knitting', 'Bullfighting', 'Applying sunscreen', 'Painting furniture', 'Grooming horse', 'Carving jack-o-lanterns']
+  an_classes: ['Fun sliding down', 'Beer pong', 'Getting a piercing', 'Shoveling snow', 'Kneeling', 'Tumbling', 'Playing water polo', 'Washing dishes', 'Blowing leaves', 'Playing congas', 'Making a lemonade', 'Playing kickball', 'Removing ice from car', 'Playing racquetball', 'Swimming', 'Playing bagpipes', 'Painting', 'Assembling bicycle', 'Playing violin', 'Surfing', 'Making a sandwich', 'Welding', 'Hopscotch', 'Gargling mouthwash', 'Baking cookies', 'Braiding hair', 'Capoeira', 'Slacklining', 'Plastering', 'Changing car wheel', 'Chopping wood', 'Removing curlers', 'Horseback riding', 'Smoking hookah', 'Doing a powerbomb', 'Playing ten pins', 'Getting a haircut', 'Playing beach volleyball', 'Making a cake', 'Clean and jerk', 'Trimming branches or hedges', 'Drum corps', 'Windsurfing', 'Kite flying', 'Using parallel bars', 'Doing kickboxing', 'Cleaning shoes', 'Playing field hockey', 'Playing squash', 'Rollerblading', 'Playing drums', 'Playing rubik cube', 'Sharpening knives', 'Zumba', 'Raking leaves', 'Bathing dog', 'Tug of war', 'Ping-pong', 'Using the balance beam', 'Playing lacrosse', 'Scuba diving', 'Preparing pasta', 'Brushing teeth', 'Playing badminton', 'Mixing drinks', 'Discus throw', 'Playing ice hockey', 'Doing crunches', 'Wrapping presents', 'Hand washing clothes', 'Rock climbing', 'Cutting the grass', 'Wakeboarding', 'Futsal', 'Playing piano', 'Baton twirling', 'Mooping floor', 'Triple jump', 'Longboarding', 'Polishing shoes', 'Doing motocross', 'Arm wrestling', 'Doing fencing', 'Hammer throw', 'Shot put', 'Playing pool', 'Blow-drying hair', 'Cricket', 'Spinning', 'Running a marathon', 'Table soccer', 'Playing flauta', 'Ice fishing', 'Tai chi', 'Archery', 'Shaving', 'Using the monkey bar', 'Layup drill in basketball', 'Spread mulch', 'Skateboarding', 'Canoeing', 'Mowing the lawn', 'Beach soccer', 'Hanging wallpaper', 'Tango', 'Disc dog', 'Powerbocking', 'Getting a tattoo', 'Doing nails', 'Snowboarding', 'Putting on shoes', 'Clipping cat claws', 'Snow tubing', 'River tubing', 'Putting on makeup', 'Decorating the Christmas tree', 'Fixing bicycle', 'Hitting a pinata', 'High jump', 'Doing karate', 'Kayaking', 'Grooming dog', 'Bungee jumping', 'Washing hands', 'Painting fence', 'Doing step aerobics', 'Installing carpet', 'Playing saxophone', 'Long jump', 'Javelin throw', 'Playing accordion', 'Smoking a cigarette', 'Belly dance', 'Playing polo', 'Throwing darts', 'Roof shingle removal', 'Tennis serve with ball bouncing', 'Skiing', 'Peeling potatoes', 'Elliptical trainer', 'Building sandcastles', 'Drinking beer', 'Rock-paper-scissors', 'Using the pommel horse', 'Croquet', 'Laying tile', 'Cleaning windows', 'Fixing the roof', 'Springboard diving', 'Waterskiing', 'Using uneven bars', 'Having an ice cream', 'Sailing', 'Washing face', 'Knitting', 'Bullfighting', 'Applying sunscreen', 'Painting furniture', 'Grooming horse', 'Carving jack-o-lanterns','Hurling', 'Polishing forniture', 'BMX', 'Riding bumper cars', 'Starting a campfire', 'Walking the dog', 'Preparing salad', 'Plataform diving', 'Breakdancing', 'Camel ride', 'Hand car wash', 'Making an omelette', 'Shuffleboard', 'Calf roping', 'Shaving legs', 'Snatch', 'Cleaning sink', 'Rope skipping', 'Drinking coffee', 'Pole vault','Swinging at the playground', 'Dodgeball', 'Ballet', 'Playing harmonica', 'Paintball', 'Cumbia', 'Rafting', 'Hula hoop', 'Cheerleading', 'Vacuuming floor', 'Playing blackjack', 'Waxing skis', 'Curling', 'Using the rowing machine', 'Ironing clothes', 'Playing guitarra', 'Sumo', 'Putting in contact lenses', 'Brushing hair', 'Volleyball']
+  #,'CliffDiving'?????????
+  thu_classes: ['BaseballPitch','BasketballDunk','Billiards','CleanAndJerk','CricketBowling','CricketShot','Diving','FrisbeeCatch','GolfSwing','HammerThrow','HighJump','JavelinThrow','LongJump','PoleVault','Shotput','SoccerPenalty','TennisSwing','ThrowDiscus','VolleyballSpiking']
   batch_size: 1
   lr: 0.001
   epochs: 100
