--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,8 +12,12 @@ wandb: False
 
 dataset_len: 1000
 
+#classify_len: 100
+classify_len: 20
+
 #checkpoint: /data1/wangqiurui/code/DA TSNFormer/best/9class0.545reg0.6143.pth
-checkpoint: 
+checkpoint: /data1/wangqiurui/code/DA TSNFormer/best/15class0.6915reg0.4918.pth
+#checkpoint: 
 #dataset: THUMOS14
 dataset: ActivityNet
 task: training
@@ -26,9 +30,11 @@ fps: 30
 use_conv: False
 
 trans_dropout: 0.1
+#sample_seq_len: 100
 sampler_seq_len: 40
 num_gpus: 1
 metric: 'cos'
+#k: 50
 k: 10
 sigma: 0.05
 mini_size: 64
@@ -42,7 +48,7 @@ ada: True
 
 d_model: 512
 # Transformer Parameters
-d_ff: 512 # FeedForward dimension
+d_ff: 2048 # FeedForward dimension
 d_k: 64
 d_v: 64  # dimension of K(=Q), V
 n_layers: 6  # number of Encoder of Decoder Layer
